Removed unused files. Added sass.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,7 @@
-{
-  "semi": false,
+{  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
   "arrowParens": "always",
-  "printWidth": 120,
-  "endOfLine": "cr"
+  "printWidth": 120
 }
