--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.3.0",
     "eslint-plugin-vue": "^9.26.0",
     "prettier": "3.2.5",
+    "sass": "^1.77.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
