--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "primevue": "^3.52.0",
+    "@primevue/themes": "4.0.0-rc.1",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primevue": "4.0.0-rc.1",
     "vue": "^3.4.21",
     "vue-router": "4"
   },
