--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "4.0.0-rc.1",
+    "url": "^0.11.4",
     "vue": "^3.4.21",
     "vue-router": "4"
   },
